[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/ui/InventoryActionModal.gd" type="Script" id=1]
[ext_resource path="res://src/ui/EntityListItem.tscn" type="PackedScene" id=2]
[ext_resource path="res://overlay_theme.tres" type="Theme" id=3]

[node name="InventoryActionModal" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -786.0
margin_top = 54.0
margin_right = -51.0
margin_bottom = -151.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 733.0
margin_bottom = 817.0
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 726.0
margin_bottom = 810.0
theme = ExtResource( 3 )

[node name="HeaderMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 721.0
margin_bottom = 69.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 701.0
margin_bottom = 49.0
theme = ExtResource( 3 )

[node name="Title" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HeaderMargin/HBoxContainer"]
margin_right = 131.0
margin_bottom = 29.0
theme = ExtResource( 3 )
text = "The Title"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 73.0
margin_right = 721.0
margin_bottom = 77.0

[node name="ListMargin" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 721.0
margin_bottom = 206.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ListContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ListMargin"]
margin_left = 20.0
margin_top = 20.0
margin_right = 701.0
margin_bottom = 105.0
custom_constants/separation = 5
alignment = 1

[node name="EntityListItem" parent="PanelContainer/MarginContainer/VBoxContainer/ListMargin/ListContainer" instance=ExtResource( 2 )]
margin_right = 681.0

[node name="EntityListItem2" parent="PanelContainer/MarginContainer/VBoxContainer/ListMargin/ListContainer" instance=ExtResource( 2 )]
margin_top = 45.0
margin_right = 681.0
margin_bottom = 85.0
